# GitHub_Test_190627

./: .gitmodules  Add_File_Test.txt  Jenkinsfile  Jenkinsfile.groovy  README.md  Test for Marvin's Branch.txt  天著湖韵花园-物品收纳表.xlsx
BAT/AutoUpLoad/: AUL.bat
BAT_2_Python/CSV/: Fault_Event_Id.csv  Fault_Event_Id.txt  test.py  transfer_txt_2_csv.py  补充说明.txt
BAT_2_Python/CSVTest/: Readme.txt  test.py
BAT_2_Python/HERM/: ManVSEleven.py
BAT_2_Python/RAM_ROM_Calaulator/: calc.py
BAT_2_Python/untaxed_income_calc/: income_calc.py
CMake/CSDN_Cmake/cmake_test_hello_world/00cmake/: CMakeLists.txt  array_lesson_42.cpp  bool_cin.cpp  hello.c  s04_pointer_lesson_56.cpp  s05_struct_P64.cpp
CMake/CSDN_Cmake/cmake_test_hello_world/00cmake/demo02_p146_employee_management_system/: employee_management_system.cpp
CMake/CSDN_Cmake/cmake_test_hello_world/00cmake/demo02_p146_worker_manager/: main.cpp  worker_manager.cpp  worker_manager.hpp
CMake/CSDN_Cmake/cmake_test_hello_world/00cmake/src01/: p106_constructor_and_deconstructor.cpp  p114_objective_module_and_this_pointer.cpp  p121_operator_overloading.cpp  p84_memory_management.cpp  p99_class_and_object.cpp
CMake/CSDN_Cmake/cmake_test_hello_world/00cmake/src02/: p127_inheritance.cpp  p135_polymorphic.cpp  p143_file_operation.cpp
CMake/CSDN_Cmake/cmake_test_hello_world/00cmake/src03/: p167_template.cpp
Jenkins/: Jenkins pipeline 新.txt  Workflow_PJ-PH.groovy  pipeline doc.txt  节点不能设置成java的解决方法.txt
PowerShell/: Prime_Number.ps1  Prime_number_result.txt  result.txt
PowerShellTestOnly/: 017.ps1
PyAutoCAD/: dwg_list_file.txt  get_dwg_filename.py  get_part_no.py  info_fill.py
Python/: .gitignore  README.md  first commit.txt
_Folder_Operation_Test/: Add_File_Test.txt
第一版冻结exe/: GUI.py
(+73 files in other folders)
